# Noteflow_v2

./: FORNOW.md
backend/: .gitignore  Cargo.toml  Dockerfile  README.md
backend/migrations/: 0001_create_users.sql  0002_create_notes.sql  0003_create_revisions.sql
backend/src/: auth.rs  db.rs  errors.rs  main.rs  models.rs  routes.rs  utils.rs  ws.rs
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/components/: AIInsightsPanel.tsx  Editor.tsx  FeedbackToast.tsx  Header.tsx  NoteCard.tsx  RevisionViewer.tsx  ShareModal.tsx  Sidebar.tsx  SyncIndicator.tsx  UserPresence.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useApiClient.ts  useAuth.ts  useNoteSync.ts  useWebSocket.ts
frontend/src/pages/: _app.tsx  index.tsx  login.tsx  settings.tsx  signup.tsx
frontend/src/pages/note/: [id].tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: formatDate.ts
