[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
hyper = "1.7.0"
thiserror = "2.0.16"
serde_json = "1"
sqlx = { version = "0.8.4", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.17.1"
jsonwebtoken = "9.3"
dotenv = "0.15"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
async-trait = "0.1"
futures = "0.3"
anyhow = "1.0"
redis = { version = "0.32.5", default-features = false, features = ["tokio-comp", "tls-native-tls", "tokio-native-tls-comp"] }
tokio-stream = "0.1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing-subscriber = "0.3"